updated and fixed integration tests